follow ide advice